# yycompression

./: .gitignore  CMakeLists.txt  README.md  heap.h  huffman.h  main.cc
src/: .CMakeLists.txt.swp  CMakeLists.txt  base.h  decoder_main.cc  encoder_main.cc  heap.cc  heap.h  huffman.cc  huffman.h
testdata/: data.txt
